updated formatting and changed text

--- a/csvconverter.ipynb
+++ b/csvconverter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "incoming-forest",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "sticky-snake",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "[547 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,12 +242,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "sacred-bennett",
    "metadata": {},
    "outputs": [],
    "source": [
-    "html_df=import_df.to_html()"
+    "html_df=import_df.to_html('cities.html')"
    ]
   },
   {
